--- a/preamble.tex
+++ b/preamble.tex
@@ -1,1 +1,11 @@
 \usepackage{booktabs}
+\usepackage{pdfpages}
+\usepackage{amsthm}
+\makeatletter
+\def\thm@space@setup{%
+  \thm@preskip=8pt plus 2pt minus 4pt
+  \thm@postskip=\thm@preskip
+}
+\makeatother
+\let\oldmaketitle\maketitle
+\AtBeginDocument{\let\maketitle\relax}
