hturner published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -1600,11 +1600,11 @@ While an issue filed on Bugzilla means there is a known issue somewhere, that do
 
 If you decide to proofread, read a section of the documentation from start to finish, filing issues in Bugzilla for each major type of problem you find. It is best to avoid filing a single issue for an entire section containing multiple problems; instead, file several issues so that it is easier to break the work up for multiple people and more efficient review.
 
-\section{Helping with the Developer's Guide}\label{helping-with-the-developers-guide}
+\section{Helping with the R Development Guide}\label{helping-with-the-r-development-guide}
 
-The Developer's Guide (what you are reading now) uses the same process as the main R documentation, except for some small differences. The source lives in a \href{https://github.com/r-devel/rdevguide/}{GitHub repository} and bug reports should be submitted to the \href{https://github.com/r-devel/rdevguide/issues}{devguide GitHub tracker}.
+The R Development Guide (what you are reading now) uses the same process as the main R documentation, except for some small differences. The source lives in a \href{https://github.com/r-devel/rdevguide/}{GitHub repository} and bug reports should be submitted to the \href{https://github.com/r-devel/rdevguide/issues}{devguide GitHub tracker}.
 
-Our dev guide workflow uses continuous integration and deployment so changes to the dev guide are normally published when the pull request is merged. \hyperref[how-to-contribute-to-this-guide]{How to contribute to this guide from the introduction.}
+Our development guide workflow uses continuous integration and deployment so changes to the development guide are normally published when the pull request is merged. \hyperref[how-to-contribute-to-this-guide]{How to contribute to this guide from the introduction.}
 
 \section{Reporting documentation bugs}\label{reporting-documentation-bugs}
 
