--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -6,9 +6,9 @@ This guide is a comprehensive resource for contributing to base R^[The [set of p
 
 Contributions to base R are possible in a number of different ways. Some of them are listed below:
 
-1. Contributing to bug fixing: Refer [Bug Tracking](#BugTrack) and [Reviewing Bugs](#ReviewBugs).
-2. Contributing to translations: Refer [Translations](#).
-3. Testing R before release: Refer [Testing Pre-release R Versions](#TestRVer).
+1. Contributing to bug fixing: Refer to [Issue Tracking](#IssueTrack) and [Reviewing Bugs](#ReviewBugs).
+2. Contributing to translations: Refer to [Translations](#message-translations).
+3. Testing R before release: Refer to [Testing Pre-release R Versions](#TestRVer).
 4. Contributing to documentation and tutorials, including this guide: Refer [Documenting R](#Doc) and [Contributing to this guide](#how-to-contribute-to-this-guide).
 
 <!-- TODO(Saranjeet): Welcome to Bug BBQ slides -->
