--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -179,11 +179,13 @@ Contributions to base R are possible in a number of different ways. Some of them
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  Contributing to bug fixing: Refer \hyperref[IssueTrack]{Issue Tracking} and \hyperref[ReviewBugs]{Reviewing Bugs}.
+  Contributing to bug fixing: Refer to \hyperref[IssueTrack]{Issue Tracking} and \hyperref[ReviewBugs]{Reviewing Bugs}.
 \item
-  Contributing to translations: Refer \hyperref[]{Translations}.
+  Contributing to translations: Refer to \hyperref[message-translations]{Translations}.
 \item
-  Testing R before release: Refer \hyperref[TestRVer]{Testing Pre-release R Versions}.
+  Testing R before release: Refer to \hyperref[TestRVer]{Testing Pre-release R Versions}.
+\item
+  Contributing to documentation, including this guide: Refer to \hyperref[Doc]{Documenting R} and \hyperref[how-to-contribute-to-this-guide]{Contributing to this guide}.
 \end{enumerate}
 
 \section{Quick start to the guide}\label{quick-start-to-the-guide}
@@ -222,6 +224,10 @@ The guide is intended as a comprehensive resource for contributing to base R. Th
 
 \section{How to contribute to this guide itself?}\label{how-to-contribute-to-this-guide}
 
+All contributors should start by reading the \href{https://github.com/r-devel/rdevguide/blob/main/CONTRIBUTING.md}{contributing page for this project}.
+
+Maintainers and contributors are also requested to follow \href{https://github.com/r-devel/rdevguide/blob/main/CONDUCT.md}{this guide's code of conduct}.
+
 This guide is built using bookdown which makes editing it easier, provided you have a GitHub account (sign-up at \href{https://github.com/}{github.com}). After you log-in to GitHub, click on the `Edit' icon highlighted with a red ellipse in the image below. This will take you to an editable version of the the source R Markdown file that generated the page you are on:
 
 \begin{figure}
@@ -231,8 +237,6 @@ This guide is built using bookdown which makes editing it easier, provided you h
 \end{figure}
 
 Use the \href{https://github.com/r-devel/rdevguide/issues}{issue tracker} to raise an issue about the guide's content or to make a feature request.
-
-Maintainers and contributors are requested to follow this project's \href{https://github.com/r-devel/rdevguide/blob/main/CONDUCT.md}{code of conduct}.
 
 \chapter{R Patched and Development Versions}\label{GetStart}
 
@@ -1377,7 +1381,70 @@ R has a substantial body of documentation, comprising help files for the core pa
 
 The involvement of the community takes many forms, from contributing content, to making bug reports or raising an issue when the documentation could be more complete or made easier to follow.
 
-This chapter is about the ways people can contribute to R's documentation, with guidance on how to do that. Any time you feel that you can clarify or fill gaps in existing documentation, your contribution is welcome and appreciated. If you find it difficult to deal with the markup used in the source files, you can ask for help with that part too. Please do not let the material in this chapter stand between the documentation and your desire to help out. However, not every good faith effort to change or extend the documentation will be accepted - sometimes the suggested changes may be incorrect; other times, while a change in wording may make some things clearer and easier to understand, the finer details of some corner case may become less clear, leading to the suggested changes being declined or modified by a member of R Core before applying them (if they agree the issue is important enough to fix).
+This chapter is about the ways people can contribute to R's documentation, with guidance on how to do that. Any time you feel that you can clarify or fill gaps in existing documentation, your contribution is welcome and appreciated. If you find it difficult to deal with the markup formatting language used in the source files, you can ask for help with that part too. Please do not let the material in this chapter stand between the documentation and your desire to help out. However, not every good faith effort to change or extend the documentation will be accepted - sometimes the suggested changes may be incorrect; other times, while a change in wording may make some things clearer and easier to understand, the finer details of some corner case may become less clear, leading to the suggested changes being declined or modified by a member of R Core before applying them (if they agree the issue is important enough to fix).
+
+\section{Helping with documentation}\label{helping-with-documentation}
+
+Maintaining the accuracy of R's documentation and keeping a high level of quality takes a lot of effort. Community members, like you, help with writing, editing, and updating content, and these contributions are appreciated and welcomed.
+
+Looking at pre-existing documentation source files can be very helpful when getting started.
+
+You can directly search for \href{https://bugs.r-project.org/buglist.cgi?component=Documentation&list_id=22501&product=R&resolution=---}{documentation issues/bugs on Bugzilla}. Issues vary from typos to unclear documentation and items lacking documentation.
+
+If you see a documentation issue that you would like to tackle, you can leave a comment on the issue saying you are going to try to solve the issue and mention roughly how long you think you will take to do so (this allows others to take on the issue if you happen to forget or lose interest).
+
+\section{Reporting documentation bugs}\label{reporting-documentation-bugs}
+
+To suggest improvements to the R manuals, report typos or bugs in the R manuals, or to raise issues related to documentation in packages maintained by the R Core Team, follow the usual guidance for \hyperref[RCorePkgBug]{reporting bugs in R}.
+
+To report bugs or typos in the documentation of a package that is not maintained by the R Core Team, follow the guidance for \hyperref[nonRCorePkgBug]{reporting bugs in contributed packages}.
+
+\textbf{Note}:
+
+There is a \texttt{\#core-documentation} channel on the \href{https://r-contributors.slack.com/}{R Contributors slack} where you can get feedback before reporting an issue or get feedback on proposed improvements.
+
+\subsection{Example documentation bugs}\label{example-documentation-bugs}
+
+Here are a couple of successfully resolved bugs as examples.
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  \href{https://bugs.r-project.org/show_bug.cgi?id=16003}{Bug 16003 - heatmap scale argument: description not complete}
+\end{enumerate}
+
+There was a question about the description in the documentation, where it wasn't technically incorrect, but was slightly unclear. This led to a discussion around the updates to the text and a couple of extra examples were added in for clarity too.
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{1}
+\tightlist
+\item
+  \href{https://bugs.r-project.org/show_bug.cgi?id=18781}{Bug 18781 - typo in texinfo}
+\end{enumerate}
+
+This is an example of a typo being spotted, raised and fixed within the same day.
+
+\section{Guidelines for writing R help files}\label{guidelines-for-writing-r-help-files}
+
+This section is based on the \href{https://developer.r-project.org/Rds.html}{guidelines used by R Core developers for writing R help files}. Extensive details of writing R documentation files can be found in the \href{https://cran.r-project.org/doc/manuals/r-release/R-exts.html\#Writing-R-documentation-files}{Writing R Extensions} manual.
+
+The language used in the documentations should follow these basic rules:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  Affirmative tone should be used to describe what the function does and how to use it effectively. Rather than creating worry in the mind of a reader, it should establish confident knowledge about the effective use of the particular function/feature.
+\item
+  More documentation is not necessarily better documentation. Long descriptions full of corner cases and caveats can create the impression that a function is more complex or harder to use than it actually is. Be succinct but exhaustive.
+\item
+  Short code examples can help in understanding better. Readers can often grasp a simple example more quickly than they can digest a formal description. Usually people learn faster with concrete, motivating examples that match the context of a typical use case.
+\item
+  Giving a code equivalent (or approximate equivalent) can be a useful addition to the description provided. You should carefully weigh whether the code equivalent adds value to the document.
+\item
+  The tone of the documentation needs to be respectful of the reader's background. Lay out the relevant information, show motivating use cases, provide glossary links, and do your best to connect-the-dots. The documentation is meant for newcomers, many of whom will be using it to evaluate the R language as a whole. The experience needs to be positive and not leave the reader with worries that something bad will happen if they make a mistake.
+\end{enumerate}
 
 \section{\texorpdfstring{Introduction to \texttt{.Rd} files}{Introduction to .Rd files}}\label{introduction-to-.rd-files}
 
@@ -1531,26 +1598,6 @@ c(xm, mean(x, trim = 0.10))
 
 Many R package developers write help files using the R package \href{https://cran.r-project.org/package=roxygen2}{roxygen2}, which generates \texttt{.Rd} files from comments in the corresponding \texttt{.R} files. However, in this guide we only consider \texttt{.Rd} files, because the help files for the base distribution are written and edited directly in \texttt{.Rd} format.
 
-\section{Guidelines for writing R help files}\label{guidelines-for-writing-r-help-files}
-
-This section is based on the \href{https://developer.r-project.org/Rds.html}{guidelines used by R Core developers for writing R help files}. Extensive details of writing R documentation files can be found in the \href{https://cran.r-project.org/doc/manuals/r-release/R-exts.html\#Writing-R-documentation-files}{Writing R Extensions} manual.
-
-The language used in the documentations should follow these basic rules:
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\item
-  Affirmative tone should be used to describe what the function does and how to use it effectively. Rather than creating worry in the mind of a reader, it should establish confident knowledge about the effective use of the particular function/feature.
-\item
-  More documentation is not necessarily better documentation. Long descriptions full of corner cases and caveats can create the impression that a function is more complex or harder to use than it actually is. Be succinct but exhaustive.
-\item
-  Short code examples can help in understanding better. Readers can often grasp a simple example more quickly than they can digest a formal description. Usually people learn faster with concrete, motivating examples that match the context of a typical use case.
-\item
-  Giving a code equivalent (or approximate equivalent) can be a useful addition to the description provided. You should carefully weigh whether the code equivalent adds value to the document.
-\item
-  The tone of the documentation needs to be respectful of the reader's background. Lay out the relevant information, show motivating use cases, provide glossary links, and do your best to connect-the-dots. The documentation is meant for newcomers, many of whom will be using it to evaluate the R language as a whole. The experience needs to be positive and not leave the reader with worries that something bad will happen if they make a mistake.
-\end{enumerate}
-
 \section{R manuals}\label{r-manuals}
 
 The \href{https://cran.r-project.org/manuals.html}{R manuals} are a part of the \href{https://svn.r-project.org/R/trunk/doc/manual/}{R sources}. Hence, bug reports/patches can also be submitted via Bugzilla, e.g.~\href{https://bugs.r-project.org/bugzilla/show_bug.cgi?id=15221}{Bug 15221 - R-admin/`Installing R under Windows': Missing argument name}. Note that they are typically referred to by their file names as listed below:
@@ -1582,18 +1629,6 @@ Note:
   The \href{https://www.gnu.org/software/texinfo/}{Texinfo manual} should be referred to for \href{https://www.gnu.org/software/texinfo/manual/texinfo/texinfo.html}{how to mark up text}.
 \end{itemize}
 
-\section{Helping with documentation}\label{helping-with-documentation}
-
-Maintaining the accuracy of R's documentations and keeping a high level of quality takes a lot of effort. Community members, like you, help with writing, editing, and updating content, and these contributions are appreciated and welcomed.
-
-Looking at pre-existing documentation source files can be very helpful when getting started.
-
-You can directly search for \href{https://bugs.r-project.org/buglist.cgi?component=Documentation&list_id=22501&product=R&resolution=---}{documentation issues/bugs on Bugzilla}. Issues vary from typos to unclear documentation and items lacking documentation.
-
-If you see a documentation issue that you would like to tackle, you can leave a comment on the issue saying you are going to try to solve the issue and mention roughly how long you think you will take to do so (this allows others to take on the issue if you happen to forget or lose interest).
-
-If you find some typo or problem on \href{https://cran.r-project.org}{CRAN} after checking the problem or typo you can write a polite email to \texttt{cran-sysadmin@r-project.org} and one of the R-core members working with CRAN. You'll probably get a prompt reply about how the issue is going to be fixed.
-
 \section{Proofreading}\label{proofreading}
 
 While an issue filed on Bugzilla means there is a known issue somewhere, that does not mean there are not other issues lurking about in the documentation. Proofreading a part of the documentation can often uncover problems.
@@ -1604,19 +1639,8 @@ If you decide to proofread, read a section of the documentation from start to fi
 
 The R Development Guide (what you are reading now) uses the same process as the main R documentation, except for some small differences. The source lives in a \href{https://github.com/r-devel/rdevguide/}{GitHub repository} and bug reports should be submitted to the \href{https://github.com/r-devel/rdevguide/issues}{devguide GitHub tracker}.
 
-Our development guide workflow uses continuous integration and deployment so changes to the development guide are normally published when the pull request is merged. \hyperref[how-to-contribute-to-this-guide]{How to contribute to this guide from the introduction.}
-
-\section{Reporting documentation bugs}\label{reporting-documentation-bugs}
-
-If you find some typo or problem on the \href{https://cran.r-project.org}{CRAN} webpages you can write a polite email to \texttt{CRAN@r-project.org} to report it. As an alternative, one can also write to the R-devel mailing list or submit a bug report via R's Bugzilla.
-
-For improvements of the R-manuals or reporting typos or bugs in the R-manuals, submit a bug report to R's Bugzilla.
-
-For reporting bugs or typos on the webpages or documentation about a particular package, write to the corresponding package maintainer. To find the maintainer of a package, use the command \texttt{maintainer("package-name")}.
-
-\textbf{Note}:
-
-There is a \texttt{\#core-documentation} channel on the \href{https://r-contributors.slack.com/}{R Contributors slack} where you can discuss about the patches for improvements to R's documentation.
+There's a section on the introduction page detailing \hyperref[how-to-contribute-to-this-guide]{how to contribute to this guide}. Once you have made suggested changes you can raise them for someone else to review through a \href{https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests}{pull request} on GitHub. Examples of past pull requests can be found on the \href{https://github.com/r-devel/rdevguide/pulls?q=is\%3Apr+is\%3Aclosed}{pull request tab in this guide's GitHub repository}.
+Our workflow for the R Development Guide uses continuous integration and deployment so changes to the live R Development Guide site are normally published once a pull request is merged.
 
 \section{See also}\label{see-also-5}
 
